--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.1.0",
+    "ioredis": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "redis": "^4.2.0"
   }
 }
