--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.6",
+    "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4"
   },
